--- a/EmpInfo/Views/Apply/BeginApplyHH.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyHH.cshtml
@@ -393,7 +393,7 @@
             </div>
             <div class="b-div">
                 <span class="b-label">
-                    收货地址:
+                    客户收货地址:
                 </span>
                 <span class="b-input">
                     <textarea type="text" class="form-control" rows="2" id="return_addr" name="return_addr" placeholder="在此填写客户收货地址" required></textarea>
